css/style.css
	#nav {
		margin: 0px 10px 0px 10px;
		border-radius: 10px;
		-moz-box-shadow: 5px 5px 5px 5px #777777;
		-webkit-box-shadow: 5px 5px 5px 5px #777777;
		box-shadow: 5px 5px 5px 5px #777777;
		background: lightblue;
	}
	#nav ul {
		padding: 0.25em;
	}
	#nav ul li {
		display: inline;
		font-family: Colonna MT, Cooper-Black, Georgia;
		font-size: 16px;
		font-weight:bold;
		padding: 2px;
		margin: 0 auto;
		border-radius: 10px;
	}

